旭暦を追加。

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
                 永球標準時（列暦）
             </h2>
             <div id="eikyu"></div>
+            <h2>
+                雰国標準時（旭暦）
+            </h2>
+            <div id="fun"></div>
             <link rel="stylesheet" href="css/styles.css">
             <script src="scripts/displayclock.js" type="module"></script>
         </main>
