各種要素を縦書きに変更。

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
     <head>
         <title>EikyuClock</title>
+        <link rel="stylesheet" href="css/styles.css">
+        <script src="scripts/displayclock.js" type="module"></script>
+        <script src="scripts/calendar.js" type="module"></script>
+        <script src="scripts/analogclock.js" type="module"></script>
     </head>
     <body>
         <main>
@@ -18,14 +22,12 @@
                         永球標準時（列暦）
                     </h2>
                     <div id="eikyu"></div>
+                </content>
+                <content id="funclock">
                     <h2>
                         雰国標準時（旭暦）
                     </h2>
                     <div id="fun"></div>
-                    <link rel="stylesheet" href="css/styles.css">
-                    <script src="scripts/displayclock.js" type="module"></script>
-                    <script src="scripts/calendar.js" type="module"></script>
-                    <script src="scripts/analogclock.js" type="module"></script>
                 </content>
                 <content id="analog">
                     <h2>
