fixed phun number. removed letia clock.

--- a/index.html
+++ b/index.html
@@ -18,20 +18,16 @@
                         この端末の時刻（西暦）
                     </h2>
                     <div id="jst"></div>
-                    <h2>
-                        永球標準時（列暦）
-                    </h2>
-                    <div id="eikyu"></div>
                 </content>
                 <content id="funclock">
                     <h2>
-                        雰国標準時（旭暦）
+                        雰国標準時（遍世時）
                     </h2>
                     <div id="fun"></div>
                 </content>
                 <content id="analog">
                     <h2>
-                        アナログ時計（雰国標準時）
+                        アナログ時計（遍世時）
                     </h2>
                     <div id="clocks">
                         <img src="../assets/body.png" width="250" height="250" id="image_body" class="clock">
@@ -45,7 +41,7 @@
             </div>
 
             <h2>
-                カレンダー（雰国標準時）
+                カレンダー（遍世時）
             </h2>
             <div class="wrapper">
                 <!-- xxxx年xx月を表示 -->
